fix header on mobile

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -18,9 +18,6 @@
     @media (max-width: 900px) {
       aspect-ratio: 3 / 1;
     }
-    @media (max-width: 600px) {
-      aspect-ratio: 3 / 1;
-    }
   }
   .header-name {
     display: none;
@@ -80,9 +77,6 @@ img.buffer {
 
   @media (max-width: 900px) {
     aspect-ratio: 3 / 1;
-  }
-  @media (max-width: 600px) {
-    aspect-ratio: 5 / 2;
   }
 }
 
